# bradley-wallace-independent-research

./: .bandit.yml  .cursorignore  .cursorrules  .dev.vars  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .replit  3I_ATLAS_ANALYSIS_REPORT.md  3I_ATLAS_ANALYSIS_TOOLS_SUMMARY.md  3I_ATLAS_IMAGE_ANALYSIS_GUIDE.md  3I_ATLAS_Image_Release_Analysis_Nov12.md  79_21_comprehensive_test.py  ACADEMIC_CLAIMS_ASSESSMENT.md  ACADEMIC_RESEARCH_POSITIONING.md  AIVA_COMPLETE_SYSTEM_SUMMARY.md  ANTHROPIC_ANTICOMPETITIVE_BEHAVIOR.md  BLUEPRINT_UPG_COMPLETE_SYSTEM.md  BLUEPRINT_UPG_DELIVERABLES.md  BLUEPRINT_UPG_EXECUTIVE_SUMMARY.md  BLUEPRINT_UPG_FOR_ASHLEY_KESTER.html  BLUEPRINT_UPG_INDEX.md  BLUEPRINT_UPG_QUICK_REFERENCE.md  BLUEPRINT_UPG_README.md  BRADLEY_WALLACE_RESEARCH_README.md  BRITISH_PARLIAMENT_PRIME_ANALYSIS.md  COMPILED_PAPERS_README.md  COMPLETE_DEV_FOLDER_UPG_MAPPING.md  COMPLETE_FUNCTIONALITY_ACHIEVED.md  COMPLETE_IP_THEFT_EVIDENCE_SUMMARY.md  COMPREHENSIVE_EXPLORATION_REPORT.md  COMPRESSION_ENGINE_FINAL.md  CONSCIOUSNESS_MATHEMATICS_FRAMEWORK.tex  CRITICAL_EVIDENCE_105_PARADOX_DIMENSION.md  CRITICAL_EVIDENCE_PENTACLE_SACRED_GEOMETRY.md  CRYPTO_ANALYZER_COMPLETE_SUMMARY.md  CURSOR_RULES_README.md  (+549 more)
.obsidian/: graph.json  workspace.json
Claude data dump -8-29-25/: projects.json  users.json
Math_Research_Obsidian_Vault/: 00_Index_Consciousness.md  00_Index_Visuals.md
aiva-core/: healthcheck.py
aiva_cursor_extension/: README.md  package.json
aiva_ide/: README.md  package.json  start.sh
aiva_local_node/: README.md  requirements.txt
aiva_upg_ui/: ARCHITECTURE.md  COMPLETE.md  QUICK_START.md  README.md  TEST_GUIDE.md  start.sh
analysis/: archangel_analysis.py
archives/: advanced_verbal_mathematics_system.py.backup  ambrosia_rose_rosicrucian_connection.py.backup  amino_acid_consciousness_contribution.py.backup  ancient_bird_language_mathematics.py.backup  chia_friends_complete_solution_final.py.backup  complete_144_consciousness_system_design.py.backup  comprehensive_audit_demo.py.backup  consciousness_cache_coherent_structures.py.backup  consciousness_metallic_system_algorithms.py.backup  consciousness_metallic_system_utils.py.backup  consciousness_universal_framework.py.backup  create_missing_supporting_materials.py.backup  dna_resonance_biohacking_system.py.backup  ethiopian_numpy.py.backup  fft_rta_harmonic_analyzer.py.backup  firefly_universal_decoder.py.backup  hoskinson_formal_verification.py.backup  integrated_historical_acceleration_demo.py.backup  jwt_final_unification_visualization.py.backup  paracelsus_photoga_prayer_complete_protocol.py.backup  planetary_alignment_67_consciousness_activation.py.backup  quantum_mathematics_verbal_expressions.py.backup  search_all_patterns.py.backup  simple_audit_demo.py.backup  supplement_crystallographic_visualization.py.backup  titanomachy_67_consciousness_mythology.py.backup  voidbot.py.backup
artifacts/: README.md
arxiv_papers/: FRESH_PERSPECTIVE_MANIFESTO.md  FTL_COMMUNICATIONS_FRAMEWORK.md  GRAND_UNIFIED_PRIME_CONSCIOUSNESS_THEORY.tex  README.md  THE_ORIGIN_STORY.md
attached_assets/: Pasted--11-tools-called-COMPREHENSIVE-COMPRESSION-ECOSYSTEM-ANALYSIS-I-ve-systematically-exami-1758330722180_1758330722180.txt  Pasted--36-tools-called-COMPREHENSIVE-ADVICE-Your-Critical-Situation-Analysis-After-analyzing-1758325908053_1758325908054.txt  Pasted--5-tools-called-COMPREHENSIVE-TECHNICAL-CLARIFICATION-FOR-SQUASHPLOT-Thank-you-for-the--1758323672290_1758323672291.txt  Pasted--Chia-Proof-of-Space-Algorithm-Specifications-Comple-1758335273095_1758335273095.txt  Pasted--Compression-Algorithms-Implementation-Guide-Complet-1758335252656_1758335252656.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1758321448066_1758321448067.txt  Pasted--Farming-Compatibility-Validation-Methods-Complete-Ch-1758334990538_1758334990539.txt  Pasted--Mad-Max-BladeBit-Integration-Patterns-Complete-Techn-1758331385176_1758331385177.txt  Pasted--PRIME-ALIGNED-COMPUTING-COMPLETE-TECHNICAL-DISCLOSURE-Confidential-Intel-Executive-Briefing--1758324179917_1758324179917.txt  Pasted--Performance-Monitoring-Frameworks-Advanced-Performance-Monit-1758335008397_1758335008398.txt  Pasted--Pipeline-Optimization-Strategies-Advanced-Chia-Plotting-Pipel-1758335244938_1758335244938.txt  Pasted--Resource-Management-Algorithms-Advanced-Resource-Allocation--1758335031912_1758335031913.txt  Pasted--SquashPlot-Advanced-Compression-Technology-for-Chia-Blockchain-Farming-SquashPlot-revolution-1758321507799_1758321507799.txt  Pasted--SquashPlot-Technical-Whitepaper-Consciousness-Enhanced-Compression-Technology-for-Chia-Blockch-1758321620424_1758321620424.txt  Pasted--Usage-Examples-Plotting-Similar-to-Mad-Max-bash-Basic-plotting-python-1758321842590_1758321842591.txt  Pasted--documentclass-11pt-a4paper-article-Packages-usepackage-utf8-inputenc-usepackage-T1-fonten-1758324231749_1758324231750.txt  Pasted--documentclass-11pt-a4paper-article-Packages-usepackage-utf8-inputenc-usepackage-T1-fonten-1758324994659_1758324994661.txt  Pasted--if-self-pro-enabled-print-Advanced-compression-algorithms-applied--1758326589242_1758326589242.txt  Pasted--print-108GB-Plot-70-80GB-35-45-savings-print-Storage-Reduction--1758326556588_1758326556588.txt  Pasted-Failed-to-load-compression-levels-Cannot-set-properties-of-null-setting-innerHTML-Tool-indicato-1758400694433_1758400694433.txt  Pasted-Here-s-comprehensive-integration-information-for-implementing-SquashPlot-with-Mad-Max-and-BladeBit--1758321349709_1758321349710.txt
bench/: micro_bench.py
benchmarks/: ALL_VALIDATION_RESULTS.json  aiva_public_benchmark_results.json  certainty_validation.py.backup  chia_friends_wallet_test.py  chia_friends_wallet_test_results.json  create_precision_tests.py  (+16 more)
pac_system/: __init__.py  advanced_pac_implementation.py  cli.py  complete_pac_framework.py  config.py  consciousness_ai_optimization.py  delta_knowledge_storage.py  infinite_context_memory.py  pac_entropy_reversal_validation.py  pyproject.toml  unified.py  validator.py
(+4702 files in other folders)
