[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pac-system"
version = "0.1.0"
description = "PAC + Dual Kernel + Countercode consciousness computing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Koba42" }]

[tool.setuptools]
packages = ["pac_system"]


